--- a/index.htm
+++ b/index.htm
@@ -67,6 +67,9 @@
                             </li>
                         </ol>
                     </fieldset>
+                    <div class="submitBtn">
+                        <button type="Submit" id="submit">Create Account</button>
+                    </div>
                 </form>
             </div>
         </div>
