--- a/index.htm
+++ b/index.htm
@@ -27,48 +27,51 @@
             <div id="form-container">
                 <form action="" method="POST">
                     <fieldset>
-                        <h1>Let's do this!</h1>
+                        <h4>Let's do this!</h4>
                         <ol id="form-list">
                             <li>
                                 <div class="input-container">
-                                    <label for="first-name">First Name<br></label>
+                                    <label for="first-name">First Name</label>
                                     <input type="text" id="first-name">
                                 </div>
                             </li>
                             <li>
                                 <div class="input-container">
-                                    <label for="last-name">Last Name<br></label>
+                                    <label for="last-name">Last Name</label>
                                     <input type="text" id="last-name">
                                 </div>
                             </li>
                             <li>
                                 <div class="input-container">
-                                    <label for="usermail">E-mail<br></label>
+                                    <label for="usermail">E-mail</label>
                                     <input type="email" id="usermail">
                                 </div>
                             </li>
                             <li>
                                 <div class="input-container">
-                                    <label for="phoneno">Phone Number<br></label>
+                                    <label for="phoneno">Phone Number</label>
                                     <input type="text" id="phoneno">
                                 </div>
                             </li>
                             <li>
                                 <div class="input-container">
-                                    <label for="pwd">Password<br></label>
-                                    <input type="password" id="pwd">
+                                    <label for="pwd">Password</label>
+                                    <input type="password" id="pwd" required>
                                 </div>
                             </li>
                             <li>
                                 <div class="input-container">
-                                    <label for="confirm-pwd">Confirm Password<br></label>
-                                    <input type="password" id="pwd">
+                                    <label for="confirm-pwd">Confirm Password</label>
+                                    <input type="password" id="pwd"required>
                                 </div>
                             </li>
                         </ol>
                     </fieldset>
                     <div class="submitBtn">
                         <button type="Submit" id="submit">Create Account</button>
+                    </div>
+                    <div id="footer">
+                        <h4>Already have an account? <a href="">Log in</a></h4>
                     </div>
                 </form>
             </div>
